# yast-dialup

./: .gitignore  README.md  RPMNAME
package/: yast2-dialup.changes  yast2-dialup.spec
src/: Makefile.am
